# codeowners-validation

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  action.yml  entrypoint.sh  release.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yaml  build.yml  check-codeowners.yaml  ci.yml
benches/: benchmark.rs  memory_benchmark.rs  speed_benchmark.rs
benches/common/: mod.rs
src/: lib.rs  main.rs  parser.rs  validator.rs
src/validators/: avoid_shadowing.rs  check_exists.rs  duplicate_patterns.rs  exists.rs  mod.rs  validator.rs
tests/: test_large_file.rs
tests/integration/: actual_file.rs  ci_sim.rs  mod.rs  stress_test.rs
tests/unit/: mod.rs  parser_tests.rs
tests/unit/validators/: check_exists_test.rs  duplicate_patterns_test.rs  mod.rs
