[package]
name = "codeowners-validation"
version = "0.4.4"
edition = "2021"
authors = ["Ryan Flanagan"] 
description = "A Rust library for validating CODEOWNERS files."
repository = "https://github.com/ryan-flan/codeowners-validation"
license = "MIT OR Apache-2.0"
keywords = ["codeowners", "validation"]
categories = ["development-tools", "filesystem"]
readme = "README.md"

[release]
tag_prefix = "v"
tag_message = "Release {{version}}"
push = true
publish = true

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
globset = "0.4.16"
ignore = "0.4.23"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.19.1"

