[package]
name = "codeowners-validation"
version = "0.4.10"
edition = "2021"
authors = ["Ryan Flanagan"] 
description = "A Rust library for validating CODEOWNERS files."
repository = "https://github.com/ryan-flan/codeowners-validation"
license = "MIT OR Apache-2.0"
keywords = ["codeowners", "validation"]
categories = ["development-tools", "filesystem"]
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
globset = "0.4.16"
ignore = "0.4.23"
num_cpus = "1.16.0"
parking_lot = "0.12.3"
rustc-hash = "2.1.1"

[dev-dependencies]
criterion = "0.6"
memory-stats = "1.2.0"
tempfile = "3.20.0"

[[bench]]
name = "speed_benchmark"
harness = false

[[bench]]
name = "memory_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
